--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html,
+body {
+  padding: 0;
+  margin: 0;
+  background-color:black;
+  color: white;
+  text-align: center;
+}
+
+.synopsis {
+  margin:auto;
+  width: 80vw;
+}
